<resources>
    <string name="app_name">Untitled Grocery App</string>
    <string name="grocery_app">Grocery App</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="grocery_n_t_t_t_tapp">Grocery \t\t\t\tApp</string>
    <string name="create_account_first_name">First Name</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_vpassword">Password</string>
    <string name="button_create_account">Create Account</string>
    <string name="create_account_last_name">Last Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="view_account">View Account</string>
    <string name="title_activity_side_bar">SideBar</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="list1">TextView</string>
    <string name="list2">TextView</string>
    <string name="list3">TextView</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="confirm_email">Confirm email</string>
    <string name="enter_account_email">Enter account email</string>
    <string name="list_name">List Name</string>
    <string name="new_item_item_name">Item Name</string>
    <string name="new_item_price">Price</string>
    <string name="new_item_quantity">Quantity</string>
    <string name="button_new_item">New Item</string>
    <string name="button_finish">Finish</string>

</resources>
