<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_item"
    tools:context=".NewItem">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/new_item_item_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_item_price"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView$"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemName" />

    <TextView
        android:id="@+id/textView$"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="$"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPrice"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewPer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="per"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPrice"
        app:layout_constraintEnd_toStartOf="@+id/spinnerMeasurement"
        app:layout_constraintStart_toEndOf="@+id/editTextPrice" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="Quantity"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextQuantity"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerMeasurement"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemName" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_item_quantity"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewQuantity"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMeasurement" />

    <Spinner
        android:id="@+id/spinnerStore"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerAisle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />

    <Spinner
        android:id="@+id/spinnerAisle"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerItemType" />

    <Button
        android:id="@+id/buttonNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_new_item"
        app:layout_constraintEnd_toStartOf="@+id/buttonFinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStore" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAisle" />
</android.support.constraint.ConstraintLayout>