<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Password:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="88dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Email:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewVPassword"
        android:layout_width="124dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Verify Password:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="94dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="Name:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/create_account_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/create_account_password"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword" />

    <EditText
        android:id="@+id/editTextVerifyPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/create_account_vpassword"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewVPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewVPassword" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/create_account_email"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVPassword" />
</android.support.constraint.ConstraintLayout>